--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,15 @@
   background: lightgreen;
   display: flex;
   justify-content: space-around;
+  margin: 5px 2px;
+  border-left: 5px solid darkgreen;
 }
 .quandaBlock-even {
   background: lightseagreen;
   display: flex;
   justify-content: space-around;
+  margin: 5px 2px;
+  border-left: 5px solid darkblue;
 }
 
 .qBlock {
